# inductive-graphs

./: README.md  dune-project  inductive_data_types.opam  slides.md
lib/: church.ml  dict.ml  dune  fusion.ml  graph.ml  heap.ml  inductive_list.ml  peano.ml
test/: dune
