(lang dune 3.6)

(name inductive_data_types)

(generate_opam_files true)

(source
 (github stntngo/inductive-graphs))

(authors "Niels Lindgren")

(maintainers "Niels LIndgre")

(license LICENSE)

(package
 (name inductive_data_types)
 (synopsis "")
 (description "")
 (depends ocaml dune)
 (tags
  (topics)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
